devel
-----
* UI: displayed wrong wfs property for a collection when using rocksdb as storage engine

* UI: updated dygraph js library to version 2.1.0

* added C++ implementation for AQL function `SHA512()`

* Added C++ implementation for the AQL TRANSLATE function

* renamed arangoimp to arangoimport for consistency
  Release packages will still install arangoimp as a symlink so user scripts 
  invoking arangoimp do not need to be changed

* UI: improved the behavior during collection creation in a cluster environment

* UI: fixed broken foxx configuration keys. Some valid configuration values
  could not be edited via the ui.

* UI: Shard distribution view now has an accordion view instead of displaying
  all shards of all collections at once.

* UI: pressing the return key inside a select2 box no longer triggers the modals
  success function

* UI: coordinators and db servers are now in sorted order (ascending)

* UI: fixed disappearing of the navigation label in some cases

* fixed issue #3917: traversals with high maximal depth take extremely long
  in planning phase.
  
* UI: fixed issue #3822: disabled name input field for system collections

* fixed issue #3741: fix terminal color output in Windows 

* UI: using default user database api during database creation now

* UI: the graph viewer backend now picks one random start vertex of the
  first 1000 documents instead of calling any(). The implementation of
  any is known to scale bad on huge collections with rocksdb.

* UI: added not found views for documents and collections

* UI: edge collections were wrongly added to from and to vertices select box during graph creation

* fixed issue #3640: limit in subquery

* UI: the graph viewer now displays updated label values correctly.
  Additionally the included node/edge editor now closes automatically
	after a successful node/edge update.

* UI: document/edge editor now remembering their modes (e.g. code or tree)
