@@ -2028,7 +2028,6 @@ AqlValue Functions::SortedUnique(arangodb::aql::Query* query,
 
   if (!value.isArray()) {
     // not an array
-    // this is an internal function - do NOT issue a warning here
     return AqlValue(AqlValueHintNull());
   }
   
@@ -2047,6 +2046,43 @@ AqlValue Functions::SortedUnique(arangodb::aql::Query* query,
   builder->openArray();
   for (auto const& it : values) {
     builder->add(it);
+  }
+  builder->close();
+  return AqlValue(builder.get());
+}
+
+/// @brief function SORTED
+AqlValue Functions::Sorted(arangodb::aql::Query* query,
+                           transaction::Methods* trx,
+                           VPackFunctionParameters const& parameters) {
+  ValidateParameters(parameters, "SORTED", 1, 1);
+  AqlValue value = ExtractFunctionParameterValue(trx, parameters, 0);
+
+  if (!value.isArray()) {
+    // not an array
+    return AqlValue(AqlValueHintNull());
+  }
+  
+  AqlValueMaterializer materializer(trx);
+  VPackSlice slice = materializer.slice(value, false);
+
+  arangodb::basics::VelocyPackHelper::VPackLess<true> less(trx->transactionContext()->getVPackOptions(), &slice, &slice);
+  std::map<VPackSlice, size_t, arangodb::basics::VelocyPackHelper::VPackLess<true>> values(less);
+  for (auto const& it : VPackArrayIterator(slice)) {
+    if (!it.isNone()) {
+      auto f = values.emplace(it, 1);
+      if (!f.second) {
+        ++(*f.first).second;
+      }
+    }
+  }
+
+  transaction::BuilderLeaser builder(trx);
+  builder->openArray();
+  for (auto const& it : values) {
+    for (size_t i = 0; i < it.second; ++i) {
+      builder->add(it.first);
+    }
   }
   builder->close();
   return AqlValue(builder.get());
