@@ -6,6 +6,12 @@ devel
 
 * added C++ implementation for AQL function `SHA512()`
 
+* add AQL functions `SORTED` and `SORTED_UNIQUE`
+  
+  `SORTED` will return a sorted version of the input array using AQL's internal 
+  comparison order
+  `SORTED_UNIQUE` will do the same, but additionally removes duplicates.
+
 * Added C++ implementation for the AQL TRANSLATE function
 
 * renamed arangoimp to arangoimport for consistency
